language/move-lang/tests/move_check/expansion/number_literal_too_long.exp
error[E01006]: invalid number literal
  ┌─ tests/move_check/expansion/number_literal_too_long.move:3:9
  │
3 │         0x1FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF;
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal is too large to fit into the largest possible integer type, 'u128'

error[E01006]: invalid number literal
  ┌─ tests/move_check/expansion/number_literal_too_long.move:4:9
  │
4 │         340282366920938463463374607431768211456;
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal is too large to fit into the largest possible integer type, 'u128'

