language/move-lang/tests/move_check/expansion/number_literal_too_long.move
module 0x42::M {
    fun foo() {
        0x1FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF;
        340282366920938463463374607431768211456;
    }
}
